# search-game-alpha-beta

./: CHANGELOG.md  README.md  search-game-alpha-beta.cabal
app/: Main.lhs
docs/: INSTALL.md  INTERACTIVE.md
